--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,24 @@
     transform: rotate(360deg);
   }
 }
+
+h1 {
+  font-size: 22px;
+  margin-left: 1rem
+}
+h3 {
+  font-size: 14px;
+  margin-left: 1rem
+}
+.current-timezone, .EST-info {
+  font-size: 12px;
+  color: darkgray;
+}
+.user-info-name {
+  max-width: 170px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  display: inline-block;
+  vertical-align: middle;
+}
